test/expected/cli/local_attributes.out
== local outside a function is an error:
shit: 1:1: warning: A local outside a function has no scope to bind.
     1 |  local x=5
       |  ^~~~~ here.
note: Declare the variable plainly or move it into a function.
shit: 1:0: trace location:
     1 |  SHIT -c 'local x=5'
shit: 1:1: error: Builtin 'local': Unable to declare a local variable outside a function.
     1 |  local x=5
       |  ^~~~~~~~~ here.
note: `local` only works inside a function body.
rc=1
== local -i evaluates an integer assignment:
7
== local -a declares an indexed array:
xy
== local -A declares an associative array:
val
== a local shadows an outer value and restores it:
inner
outer
